# hse-python-backend

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
.github/workflows/: ci-docker.yml  ci.yml
shop_api/: crud.py  main.py  models.py
shop_api/routers/: cart.py  item.py
tests/: test_homework_2.py
