[tool.poetry]
name = "shop_api"
version = "0.1.0"
description = "HSE Python Backend Course HW#2"
authors = ["Daniel Kopecky <danielkopecky@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
prometheus-fastapi-instrumentator = "^7.0.0"
uvicorn = "^0.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-faker = "^2.0.0"
httpx = "^0.27.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
